# signal-processing-G2066

./: .gitignore  CMakeLists.txt  Display3DData.py  Filter_Demo.py  Imaging.py  Imaging3D.py  MATtoCSV.py  README.md  cost_calc.ipynb  permutation_costs.xlsx  requirements.txt
3D RECONSTRUCTION/3D reconstructed/Al Hole 5MHz 02022026/: recon_volume.npy
CPP/: CMakeLists.txt  README.md
CPP/TFM/: CMakeLists.txt  bindings.cpp  tfm.cpp  tfm.h
CPP/TFM_GPU/: CMakeLists.txt  bindings_gpu.cpp  tfm_gpu.cpp  tfm_gpu.h
Classes/: CalcSpeedOfSound.py  Filter.py  TFM1D.py
DATA/1D Raw Data/Al Hole 5MHz 02022026/: Al_40_1.mat  Al_40_10.mat  Al_40_11.mat  Al_40_12.mat  Al_40_13.mat  Al_40_14.mat  Al_40_15.mat  Al_40_16.mat  Al_40_17.mat  Al_40_18.mat  Al_40_19.mat  Al_40_2.mat  Al_40_20.mat  Al_40_21.mat  Al_40_22.mat  Al_40_3.mat  Al_40_4.mat  Al_40_5.mat  Al_40_6.mat  Al_40_7.mat  Al_40_8.mat  Al_40_9.mat
DATA/1D Raw Data/Al Hole Diag 15MHz 11022026/: Al_40_1.mat  Al_40_2.mat  Al_40_3.mat  Al_40_4.mat  Al_40_5.mat  Al_40_6.mat
DATA/1D Raw Data/Al Pure 10MHz 12022026/: Para1.txt
DATA/1D Raw Data/Al Pure 10MHz 17022026/: Param.txt
DATA/1D Raw Data/Al Pure 10MHz Ex 09032026/: Imaging Set up.txt  Speed of Sound 1.mat  Speed of Sound 2.mat  Speed of Sound 3.mat  Speed of Sound Set up.txt
DATA/1D Raw Data/Cu Pure 10MHz 16022026/: Param.txt
PROCESSING/: Aluminium Experiment.py  Angular Filter.py  Copper Experiment 11032026.py  Filter_Demo.py  Overlap.py  SoundSpeed.py
STITCHING/: 2D_stitch_2_photos.py  3D_stitch_2_images.ipynb  3D_stitch_2_images_improved.ipynb  3D_stitch_dB_cutoff.ipynb  3D_stitch_multiple.ipynb  3D_stitch_validation.ipynb  multiple_change_complexity.ipynb  stitch_change_complexity.ipynb  tile_based.py
STITCHING/2D_stitching/: 2Dstitch_diff_photos.ipynb
STITCHING/3D_stitching_results/: Al_Hole_3MHz_28012026_Al_40_2_TFM_3D_and_Al_40_3_TFM_3D.npy
STITCHING/Stitching_validation/: FSC.py  Stats_based.py
SYNTHETIC DATA/: 3D Synthetic data.ipynb  3d Synthetic Data.py  3d synthetic data v2.py  3d synthetic data v2.py.backup  3dSyntheticData.py  README.md  open_synthetic_data.py  run_engine.py  test_angular_imaging.py  test_hilbert_direction.py  test_subvolume_angular.py
SYNTHETIC DATA/engine/: __init__.py  config.py  fmc_engine.py  geometry.py  interfaces.py  materials.py  microstructure.py  propagation.py  rays.py  scattering.py  voxel_volume.py  waveforms.py
SYNTHETIC DATA/legacy/: 3d synthetic data v2.py  analyze_accuracy.py  compare_images.py  debug_2d_tfm.py  debug_fmc_acquisition.py  open_synthetic_data.py  ray_tracing_ndt.py  ray_tracing_ndt_2d.py
(+322 files in other folders)
